# braveHero

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
Code/: logging.cpp  logging.h  stb_image.h
Code/SDK/FX/: Shader.cpp  Shader.h
Code/SDK/FX/Shaders/: Common.fs
Code/SDK/Game/: GameStartup.cpp  GameStartup.h  GraphicStartup.cpp  GraphicStartup.h  Settings.cpp  Settings.h
Code/SDK/Game/Objects/: GameObject.cpp  GameObject.h  GraphObject.cpp  GraphObject.h  PhysObject.cpp  PhysObject.h
Code/SDK/Game/Objects/Characters/: Hero.h
